--- a/RUDP1/Japanese/win/winvnc/winvnc.rc
+++ b/RUDP1/Japanese/win/winvnc/winvnc.rc
@@ -69,14 +69,14 @@ BEGIN
     BEGIN
         BLOCK "080904b0"
         BEGIN
-            VALUE "CompanyName", "Thin Telework Open Source Version"
+            VALUE "CompanyName", "Thin Telework Private Version"
             VALUE "FileDescription", "User-Mode Remote Desktop Server"
             VALUE "FileVersion", "4.1.2"
             VALUE "InternalName", "urdpserver"
             VALUE "LegalCopyright", "Copyright (c) 2020 NTT-East and IPA Special Project. Copyright RealVNC Ltd. 2002-2019."
             VALUE "LegalTrademarks", ""
             VALUE "OriginalFilename", "urdpserver.exe"
-            VALUE "ProductName", "Thin Telework Open Source Version"
+            VALUE "ProductName", "Thin Telework Private Version"
             VALUE "ProductVersion", "4.1.2"
         END
     END
